front end alignment fixed

--- a/src/components/components page/ComponentsPage.css
+++ b/src/components/components page/ComponentsPage.css
@@ -56,6 +56,7 @@
   font-size: 20px !important;
 }
 .sliderText {
+  margin-left: 20px;
 margin-top: 30px;
   font-weight: bold;
   border: 4px !important;
